# selene

./: .env.example  .flake8  .gitignore  CLAUDE.md  PATENT_PRIOR_ART_ANALYSIS.md  README.md  SELENE_Project_Plan_1.md
.github/workflows/: ci.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: PRD.md
docs/whitepapers/: build.sh  generate_figures.py
scripts/: run_demo.sh  setup_wsl2.sh  start.sh  sync_and_build.sh  validate_phase5.sh  verify_drive.sh  verify_phase1.sh  wsl_sudo.sh
scripts/git-hooks/: pre-push
selene_agent/: package.xml  setup.cfg  setup.py
selene_agent/config/: nav_params.yaml
selene_agent/launch/: agent.launch.py
selene_agent/selene_agent/: agent_node.py  energy_manager.py  fsm.py  navigator.py  obstacle_avoidance.py  operator_command.py
selene_agent/test/: test_agent_operator_callback.py  test_energy_manager.py  test_fsm.py  test_fsm_operator_transitions.py  test_navigator.py  test_skills.py
selene_dashboard/: package-lock.json  package.json
selene_dashboard/public/: index.html
selene_dashboard/src/: App.css  App.jsx
selene_hal/: package.xml  setup.cfg  setup.py
selene_hal/config/: excavator.yaml  (+2 more)
selene_isru/: package.xml  setup.cfg  setup.py
selene_msgs/: CMakeLists.txt  package.xml
selene_msgs/msg/: BidResponse.msg  FleetAlert.msg  MissionProgress.msg  ResourceMapUpdate.msg  RobotState.msg  TaskAnnouncement.msg  TaskAssignment.msg
selene_msgs/srv/: InjectTask.srv  OverrideRobot.srv  SetRobotCommand.srv
selene_orchestrator/: package.xml  setup.cfg  setup.py
selene_sim/: package.xml  setup.cfg  setup.py
(+120 files in other folders)
